--- a/index.html
+++ b/index.html
@@ -7,5 +7,29 @@
 </head>
 <body>
     <p>hello my friend</p>
+    <button>submit</button>
 </body>
 </html>
+
+
+<i...
+--foder................staging.Area.....................Commited
+..index.html
+..index.css
+
+
+-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
