--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index2.css">
 </head>
 <body>
     <p>hello my friend</p>
@@ -14,7 +16,7 @@
 
 <i...
 --foder................staging.Area.....................Commited
-..index.html
+                                                      ..index.html
 ..index.css
 
 
